KOffice 1.4 Backport

Fix crash related to obscured cells in rendering code.

Note: There might be some related bugs that caused this crash.
      Anyway, this code is cleaner and does fix the crash.

BUG: 108659

svn path=/branches/koffice/1.4/koffice/; revision=432256